# XOHW18

./: .gitignore  README.md  readme.txt
RubikCubeSolver/: CMakeLists.txt
RubikCubeSolver/src/: RubikSolver.cpp  State.h  main.cpp
RubikCubeSolver/src/cube_repr/: ColorCube.h  Cube.h  RubikCube.h
RubikCubeSolver/src/table/: Table.h
RubikCubeSolver_final/src/: RubikSolver.h  utils.cpp  utils.h
RubikCubeSolver_final/src/cube_repr/: ColorCube.cpp  Cube.cpp  RubikCube.cpp
RubikCubeSolver_final/src/table/: Table.cpp
RubikCubeSolver_final/test/: test_solver.cpp
Vivado_HLS/: matrixAvg.cpp
Vivado_HLS/RubikCubeSolver/: .cproject  .project  .vivado_hls_log_all.xml  vivado_hls.app
Vivado_HLS/RubikCubeSolver/.apc/: autopilot.apfmapping
Vivado_HLS/RubikCubeSolver/RubikCube/: RubikCube.aps  script.tcl
Vivado_HLS/RubikCubeSolver/RubikCube/.autopilot/: .autopilot_exit
added/: I2C_arduino.py  color_detect.py
added/matrixAvg/: .cproject  .project  .vivado_hls_log_all.xml  vivado_hls.app
added/matrixAvg/.apc/: autopilot.apfmapping  testAvg.cpp
added/matrixAvg/solution1/.autopilot/: .autopilot_exit
added/matrixAvg/solution1/sim/: .autosim.status
added/project_matrix/: project_matrix.xpr
added/project_matrix/project_matrix.cache/wt/: gui_resources.wdf  java_command_handlers.wdf  webtalk_pa.xml
added/project_matrix/project_matrix.runs/.jobs/: vrs_config_1.xml  (+1 more)
firmware_arduino/: Total_firmware.ino  firmware_arduino.ino
i2c/: I2C_arduino.py
src/vhdl/: matrixAvg.vhd
sw/: color_detect.py
vivado_hls/matrixAvg/solution1/: script.tcl  solution1.aps
(+518 files in other folders)
